hidden tap highlight img home, fix overflow in homwe hidden img

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -21,6 +21,9 @@
   margin: 0;
   padding: 0;
 }
+#root {
+  overflow: hidden;
+}
 html {
   font-size: 62.5%;
   line-height: 16px;
