--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,10 @@
 @use 'variable';
 .home,
 .skill,
-.contact {
-  padding-bottom: 50px;
-  overflow: hidden;
+.contact,
+.project {
+  padding-bottom: 150px;
+  // overflow: hidden;
 }
 .section__title {
   margin: 100px 0 40px 0;
@@ -34,6 +35,7 @@
   transform: translateX(-50%);
   animation: slide 2s cubic-bezier(0.19, 0.135, 0.15, 0.86);
   transition: all 0.6s cubic-bezier(0.19, 0.135, 0.15, 0.86);
+  -webkit-tap-highlight-color: transparent;
 }
 
 .intro-wrapper {
@@ -140,8 +142,8 @@
   }
   &__lowerLayer {
     position: absolute;
-    width: 90%;
-    height: 90%;
+    width: 85%;
+    height: 85%;
     background-color: var(--project-preview-lowerlayer-background);
     transform: rotate(15deg);
     border-radius: var(--border-radius);
